minor: update responses
