# src/constants/swagger.json
@@ -40,6 +40,17 @@
         }
       }
     },
+    "[/api/openapi.json": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/catalog/": {
       "get": {
         "description": "Get the entire catalog.",
@@ -144,7 +155,7 @@
           }
         ],
         "responses": {
-          "200": {
+          "201": {
             "description": "Return a catalog of favorites",
             "schema": {
               "$ref": "#/definitions/ReturnFavorite"
@@ -190,20 +201,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "Return an onject with message",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "detail": {
-                  "type": "string",
-                  "example": "Success message"
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            }
+          "204": {
+            "description": "No content"
           },
           "400": {
             "description": "Invalid data or validation errors",
